<resources>
    <string name="app_name">CurrencyExchangeTestApp</string>
    <string name="title_popular">Популярное</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_sorting">Сортировка</string>
    <string name="search">Поиск</string>
    <string name="settings">Сортировка</string>
    <string name="filter_text">Варианты сортировки:</string>
    <string name="name_filter">По алфавиту</string>
    <string name="ascending">-по возрастанию</string>
    <string name="descending">-по убыванию</string>
    <string name="value_filter">По значению</string>
    <string name="sort">Отсортировать</string>
</resources>